--- a/CSS/TPfinal.css
+++ b/CSS/TPfinal.css
@@ -1,30 +1,22 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 
 body {
     color:black;
     background-color: #fdfdd3;
+    height: 100%;
 }
 
 header {
-    height: 70px;
     background-color: #6c3b2a;
-    margin-bottom: 0px;
+}
+
+.logo img{
+    width: 80px;
 }
 
 footer {
     height: 50px;
     width: 100%;
     background-color: #2e1d17;
-}
-
-#logo {
-    margin-left: 3%;
-    padding: 1px;
-    width: 90%;
-    height: 90px;
 }
 
 /*#buscador {
@@ -88,14 +80,6 @@ h2 {
     margin-bottom: 10px;
 }
 
-#form {
-    padding: 50px;
-    margin: auto;
-    margin-bottom: 50px;
-    width: 60%;
-    background-color: #b37662be;
-    border-radius: 5px;
-}
 
 input, textarea {
     border:0.5px solid #7e5142be;
@@ -141,17 +125,18 @@ a:hover {
     margin-bottom: 5px;
 }
 
-footer p {
-    color: white;
-    font-size: 11px;
-    text-align: center;
-    padding-top: 18px;
+footer{
+    height: 110px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 p {
-    font-size: 20px;
+    color: #ffffff;
+    font-size: 11px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
+    margin: 0;
 }
 
 #mascotas {
