--- a/CSS/TPfinal.css
+++ b/CSS/TPfinal.css
@@ -133,10 +133,15 @@ footer{
 }
 
 p {
-    color: #ffffff;
-    font-size: 11px;
+    color: #2e1d17;
+    font-size: 18px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
+}
+
+footer p{
+    color: #ffffff;
+    font-size: 11px;
 }
 
 #mascotas {
